package ictgradschool.industry.common;

public class Feedback {
    private int bulls;
    private int cows;

    public int getBulls() {
        return bulls;
    }

    public int getCows() {
        return cows;
    }
    public void incrementBulls() {
        bulls++;
    }

    public void incrementCows() {
        cows++;
    }
}
